# Interfaz_httpserver_configuracion_wifi

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/wifi_manager/: CMakeLists.txt  Kconfig  idf_component.yml  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
components/wifi_manager/page/: confirmation.html  home.html  index.js  styles.css
main/: CMakeLists.txt  main.c
